# ocaml-freetype

./: README.md  dune-project  ocaml_freetype.opam
src/bindings/: bindings.ml  dune
src/lib/: FreeType.ml  FreeType.mli  dune
src/stubgen/: bindings_c_gen.ml  dune
test/: dune  test.ml
